testdata/golden/hir_borrow/invalid/shared_borrow_blocks_mutation.hir
error SEM3019 testdata/golden/hir_borrow/invalid/shared_borrow_blocks_mutation.sg:4:5 cannot mutate 'x' while it is shared-borrowed

== HIR ==
module 

fn t() -> nothing (id=1, sym=1134) {
  let mut x: int [copy] = 1
  let r: &int [&] = (& x): &int
  (x = 2): int
  return
}

borrow edges:
  L2269(r) (&) borrows L2268(x) at 0:51-53 scope=S3
events:
  borrow_start L2269(r) -> L2268(x) (&) at 0:51-53 scope=S3 note="B1"
  write L2268(x) at 0:59-64 scope=S3 note="issue=frozen borrow=B1"
  borrow_end L2269(r) -> L2268(x) scope=S3 note="scope_end B1"
move plan:
  L2268(x): MoveForbidden (write blocked by frozen (B1))
  L2269(r): MoveCopy (copy type)

